--- a/css/syleguide.css
+++ b/css/syleguide.css
@@ -11,7 +11,6 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background: rgba(26,35,126 ,1) url('../assets/images/home.jpg') no-repeat center center fixed;
   background-size: cover;
 
   color: rgba(232,234,246 ,1);
@@ -25,4 +24,51 @@ body {
 
   background: rgba(41,182,246 ,1);
   color: rgba(1,87,155 ,1);
+}
+
+.row_1{
+  margin-top: 30px;
+}
+
+.right{
+  
+  height: 60px;
+  float: right;
+  margin-top: 20px;
+  margin-bottom:30px;
+}
+.right ul{
+  text-align: right;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+}
+
+.right li{
+  display: inline;
+  padding-right: 40px;
+  font: 15px helvetica;
+}
+
+li a:link{
+text-decoration: none;
+color: black;
+}
+a{
+  color: black;
+}
+
+h1{
+  text-align: center;
+  font-size: 30px;
+}
+
+h1,.title{
+  color: black;
+  font-family: helvetica;
+  font-weight: bold;
+}
+
+.title{
+font-size: 15px;
 }
