--- a/css/syleguide.css
+++ b/css/syleguide.css
@@ -1,108 +1,88 @@
 * {
   box-sizing: border-box;
-
 }
-
 html, body {
   margin: 0;
   padding: 0;
 }
-
 body {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
-  overflow: hidden;
   margin: 0;
-
 }
-
-
 ::selection {
-  background: #F4AD77; /* WebKit/Blink Browsers */
+  background: #F4AD77;
+  /* WebKit/Blink Browsers */
 }
-
 ::-moz-selection {
-  background: #F4AD77; /* Gecko Browsers */
+  background: #F4AD77;
+  /* Gecko Browsers */
 }
-
-
 .navigation:link {
   text-decoration: none;
   color: black;
 }
 
 /* visited link */
+
 .navigation:visited {
   color: black;
-
 }
-
-.navigation:hover,
-.doorverwijs:hover,
-.solicitatie:hover {
+.navigation:hover, .doorverwijs:hover, .solicitatie:hover {
   color: #F4AD77;
   font-weight: bold;
 }
 
-
 /* selected link */
+
 .navigation:active {
   color: black;
 }
 
 /*selected with tabs*/
+
 .navigation:focus {
   color: black;
 }
-
-
-.row_1{
+.row_1 {
   margin-top: 30px;
 }
-
-.right{
-  
+.right {
   height: 60px;
   float: right;
   margin-top: 20px;
-  margin-bottom:30px;
+  margin-bottom: 30px;
 }
-.right ul{
+.right ul {
   text-align: right;
   margin-top: 30px;
   margin-bottom: 30px;
-
 }
-
-.right li{
+.right li {
   display: inline;
   padding-right: 40px;
   font: 15px helvetica;
 }
-
-li a:link{
-text-decoration: none;
-color: black;
-}
-a{
+li a:link {
+  text-decoration: none;
   color: black;
 }
-.color{
+a {
+  color: black;
+}
+.color {
   height: 60px;
   font-size: 12px;
   line-height: 14px;
   width: 200px;
-  
- 
 }
-.color1{
+.color1 {
   background-color: #F4AD77;
 }
-.color2{
+.color2 {
   background-color: black;
   color: white;
 }
-
 .circle {
   width: 100px;
   height: 100px;
@@ -114,12 +94,21 @@ a{
   background: #F4AD77;
   border: none;
 }
-button:active{
-border: none;
- background: #F4AD62;
+button:active {
+  border: none;
+  background: #F4AD62;
+}
+.pic {
+  height: 100px;
+  width: 100px;
 }
 
-.pic{
-height: 100px;
-width: 100px;}
+.icon{
+  font-size: 50px;
+}
 
+.input_field{
+  border: none;
+  border-bottom: solid 1px;
+  font-size: 15px;
+}
