--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ a:hover{
 }
 
 body{
-	background-image: url('../assets/images/bubble.jpg');
+	background-image: url('../assets/images/coding.jpg');
 	height: 100vh;
 	background-size: cover;
 	overflow: hidden;
