--- a/sites/bubble/css/scss/base/_typography.scss
+++ b/sites/bubble/css/scss/base/_typography.scss
@@ -1,5 +1,6 @@
 body {
   @include helvetica(16px, 300, 1.42);
+  background-color: white;
 }
 h1, h2, h3, h4, h5, h6 {
    @include helvetica(16px, 300, 1.42);
