--- a/sites/bubble/css/scss/abstracts/_mixins.scss
+++ b/sites/bubble/css/scss/abstracts/_mixins.scss
@@ -58,6 +58,6 @@
     @media (min-width: 0rem) { @content ; }
   }
   @else {
-    @media (min-width: $point) { @content ; }
+    @media (max-width: $point) { @content ; }
   }
 }
