--- a/sites/bubble/css/scss/components/_buttons.scss
+++ b/sites/bubble/css/scss/components/_buttons.scss
@@ -3,7 +3,41 @@
 	.circle {
 			position: absolute;
 			top: 170px;
-			right: 50px;
+			right: 150px;
+			@include bp(xsm){
+				right: 100px;
+			}
+			@include bp(sm){
+				right: 70px;
+			}
+			@include bp(md){
+				right: 150px;
+			}
+			@include bp(1280px){
+				right: 140px;
+			}
+			@include bp(1240px){
+				right: 125px;
+			}
+			@include bp(1024px){
+				right: 20px;
+			}
+			@include bp(980px){
+				top: 250px;
+				right: 20px;
+			}
+			@include bp(675px){
+				top: 170px;
+				right: 130px;
+			}
+			@include bp(675px){
+				top: 170px;
+				right: 50px;
+			}
+			@include bp(675px){
+				top: 170px;
+				right: 100px;
+			}
 			width: 50px;
 			height: 50px;
 			border-radius: 50%;
