--- a/sites/bubble/css/scss/layout/_rowandgridchanges.scss
+++ b/sites/bubble/css/scss/layout/_rowandgridchanges.scss
@@ -11,6 +11,9 @@
 .portfolio {
 	/*height of the row 1= a small height 2= big height*/
 	
+	.inner__row{
+		margin-top: 12px;
+	}
 	.row__1 {
 		margin-top: 12px;
 		height: 180px;
