--- a/css/scss/base/_typography.scss
+++ b/css/scss/base/_typography.scss
@@ -27,6 +27,10 @@ h4 {
 p {
   font-family: helvetica;
 }
+.footernote{
+  font-size: 7px;
+  text-align: center;
+}
 
 li {
   font-family: helvetica;
