--- a/css/scss/layout/_pictures.scss
+++ b/css/scss/layout/_pictures.scss
@@ -36,6 +36,13 @@
 						height: 180px;
 					}
 				}
+
+				@include bp(1760px) {
+					.pic {
+						width: 100%;
+						height: auto;
+					}
+				}
 				/*defines the length of the picture*/
 				.piclow {
 					width: 100%;
